--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -18,15 +18,14 @@
 
     <TimePicker
         android:id="@+id/timePicker"
+
         android:layout_width="372dp"
         android:layout_height="341dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
         android:timePickerMode="spinner"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="-25dp"
-        tools:layout_editor_absoluteX="-30dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
